# ChangeLog for dev-java/gnu-jaxp
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/gnu-jaxp/ChangeLog,v 1.4 2004/06/24 22:27:53 agriffis Exp $

  03 May 2004; David Holm <dholm@gentoo.org> gnu-jaxp-1.0_beta1.ebuild:
  Added to ~ppc.

  30 Mar 2004; Chris Aniszczyk <zx@gentoo.org> gnu-jaxp-1.0_beta1.ebuild:
  Fixes bug #45691

*gnu-jaxp-1.0_beta1 (16 Mar 2003)

  16 Mar 2003; Dylan Carlson <absinthe@gentoo.org> gnu-jaxp-1.0_beta1.ebuild:
  Initial import.
  
  GNU JAXP, a part of the GNU Classpath Extensions project (hosted at
  savannah.gnu.org) is a free implementation of the standard XML processing APIs
  for Java: 
  
  	- SAX Parser API
  	- DOM Level 2 generic XML data structures
  	- Sun's JAXP v1.1 interfaces
